@@ -53,6 +53,13 @@ class App_Locations_ServiceLocations {
 		add_filter( 'appointments_default_options', array( $this, 'default_options' ) );
 		add_filter( 'app-shortcodes-register', array( $this, 'register_shortcodes' ) );
 		add_filter( 'app-services-first_service_id', array( $this, 'get_services_min_id' ), 10 );
+		/**
+		 * Add service location
+		 *
+		 * @since 2.3.3
+		 */
+		add_filter( 'app_pre_confirmation_reply', array( $this, 'add_location_to_reply_array' ) );
+		add_filter( 'appointments_notification_replacements', array( $this, 'add_replacements' ), 10, 4 );
 	}
 
 	public function default_options( $options ) {
@@ -360,6 +367,35 @@ class App_Locations_ServiceLocations {
 			$service->service_location = get_option( 'app-service_location-' . $service->ID, false );
 		}
 		return $service;
+	}
+
+	/**
+	 * Add Service Location to reply array
+	 *
+	 * @since 2.3.3
+	 */
+	public function add_location_to_reply_array( $reply_array ) {
+		$location = $this->_service_to_location( $reply_array['service_id'] );
+		$content = $location->get_display_markup();
+		if ( ! empty( $content ) ) {
+			$reply_array['service_location'] = sprintf(
+				'<label class="app-service-location"><span>%s: </span>%s</label>',
+				esc_html__( 'Service Location', 'appointments' ),
+				$content
+			);
+		}
+		return $reply_array;
+	}
+
+	/**
+	 * Add replacements
+	 *
+	 * @since 2.3.3
+	 */
+	public function add_replacements( $replacement, $notification_type, $text, $object ) {
+		$location = $this->_service_to_location( $object->service );
+		$replacement['/\bSERVICE_LOCATION\b/U'] = $location->get_display_markup();
+		return $replacement;
 	}
 }
 App_Locations_ServiceLocations::serve();
