@@ -47,6 +47,12 @@ class App_Locations_WorkerLocations {
 		add_action( 'wpmudev_appointments_insert_appointment', array( $this, 'record_appointment_location' ), 40 );
 
 		add_filter( 'app-shortcodes-register', array( $this, 'register_shortcodes' ) );
+		/**
+		 * Add service location
+		 *
+		 * @since 2.3.3
+		 */
+		add_filter( 'app_pre_confirmation_reply', array( $this, 'add_location_to_reply_array' ) );
 	}
 
 	function show_nags() {
@@ -275,6 +281,24 @@ class App_Locations_WorkerLocations {
 			$worker->worker_location = self::worker_to_location_id( $worker->ID );
 		}
 		return $worker;
+	}
+
+	/**
+	 * Add worker Location to reply array
+	 *
+	 * @since 2.3.3
+	 */
+	public function add_location_to_reply_array( $reply_array ) {
+		$location = $this->_worker_to_location( $reply_array['worker_id'] );
+		$content = $location->get_display_markup();
+		if ( ! empty( $content ) ) {
+			$reply_array['worker_location'] = sprintf(
+				'<label class="app-worker-location"><span>%s: </span>%s</label>',
+				esc_html__( 'Location', 'appointments' ),
+				$content
+			);
+		}
+		return $reply_array;
 	}
 }
 App_Locations_WorkerLocations::serve();
